@@ -1,0 +1,19 @@
+// -*- C++ -*-
+//
+// This is the forward declaration of the FFTVertex class.
+//
+#ifndef HERWIG_FFTVertex_FH
+#define HERWIG_FFTVertex_FH
+
+#include "ThePEG/Config/Pointers.h"
+
+namespace Herwig {
+namespace Helicity {
+using namespace ThePEG;
+
+class FFTVertex;
+ThePEG_DECLARE_POINTERS(FFTVertex,FFTVertexPtr);
+
+}
+}
+#endif
