@@ -1,0 +1,20 @@
+// -*- C++ -*-
+//
+// This is the forward declaration of the FFVTVertex class.
+//
+#ifndef HERWIG_FFVTVertex_FH
+#define HERWIG_FFVTVertex_FH
+
+#include "ThePEG/Config/Pointers.h"
+
+namespace Herwig {
+namespace Helicity {
+using namespace ThePEG;
+
+class FFVTVertex;
+ThePEG_DECLARE_POINTERS(FFVTVertex,FFVTVertexPtr);
+
+}
+}
+
+#endif
