@@ -1,4 +1,8 @@
 pkglib_LTLIBRARIES = HwTVertex.la
 HwTVertex_la_LDFLAGS = -module
 HwTVertex_la_SOURCES = \
-FFTVertex.cc FFTVertex.h FFTVertex.icc FFVTVertex.cc FFVTVertex.h FFVTVertex.icc SSTVertex.cc SSTVertex.h SSTVertex.icc VVTVertex.cc VVTVertex.h VVTVertex.icc VVVTVertex.cc VVVTVertex.h VVVTVertex.icc
+FFTVertex.cc  FFTVertex.h  FFTVertex.fh  FFTVertex.icc  \
+FFVTVertex.cc FFVTVertex.h FFVTVertex.fh FFVTVertex.icc \
+SSTVertex.cc  SSTVertex.h  SSTVertex.fh  SSTVertex.icc \
+VVTVertex.cc  VVTVertex.h  VVTVertex.fh  VVTVertex.icc \
+VVVTVertex.cc VVVTVertex.h VVVTVertex.fh VVVTVertex.icc
