@@ -1,0 +1,20 @@
+// -*- C++ -*-
+//
+// This is the forward declaration of the VVTVertex class.
+//
+#ifndef HERWIG_VVTVertex_FH
+#define HERWIG_VVTVertex_FH
+
+#include "ThePEG/Config/Pointers.h"
+
+namespace Herwig {
+namespace Helicity {
+using namespace ThePEG;
+
+class VVTVertex;
+ThePEG_DECLARE_POINTERS(VVTVertex,VVTVertexPtr);
+  
+}
+}
+
+#endif
