@@ -1,0 +1,20 @@
+// -*- C++ -*-
+//
+// This is the forward declaration of the VVVTVertex class.
+//
+#ifndef HERWIG_VVVTVertex_FH
+#define HERWIG_VVVTVertex_FH
+
+#include "ThePEG/Config/Pointers.h"
+
+namespace Herwig {
+namespace Helicity {
+
+using namespace ThePEG;
+
+class VVVTVertex;
+ThePEG_DECLARE_POINTERS(VVVTVertex,VVVTVertexPtr);
+
+}
+}
+#endif
