@@ -1,3 +1,4 @@
 pkglib_LTLIBRARIES = HwRSModel.la
 HwRSModel_la_SOURCES = RSModel.cc  RSModel.h  RSModel.icc
 HwRSModel_la_LDFLAGS = -module
+##HwRSModel_la_LIBADD = $(top_builddir)/Helicity/Vertex/Tensor/HwTVertex.la
