@@ -64,10 +64,10 @@ inline IVector RSModel::getReferences() {
 
 inline Energy RSModel::lambda_pi() const {return _theLambda_pi;}
 
-inline tFFTPtr   RSModel::vertexFFGR()  const {return _theFFGRVertex;}
-inline tVVTPtr   RSModel::vertexVVGR()  const {return _theVVGRVertex;}
-inline tSSTPtr   RSModel::vertexSSGR()  const {return _theSSGRVertex;}
-inline tFFVTPtr  RSModel::vertexFFVGR() const {return _theFFVGRVertex;}
-inline tVVVTPtr  RSModel::vertexVVVGR() const {return _theVVVGRVertex;}
+inline tFFTVertexPtr   RSModel::vertexFFGR()  const {return _theFFGRVertex;}
+inline tVVTVertexPtr   RSModel::vertexVVGR()  const {return _theVVGRVertex;}
+inline tSSTVertexPtr   RSModel::vertexSSGR()  const {return _theSSGRVertex;}
+inline tFFVTVertexPtr  RSModel::vertexFFVGR() const {return _theFFVGRVertex;}
+inline tVVVTVertexPtr  RSModel::vertexVVVGR() const {return _theVVVGRVertex;}
 
 }
